--- a/CALCULATOR DESIGN/Calculator.html
+++ b/CALCULATOR DESIGN/Calculator.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0086)file:///E:/FULL%20STACK%20PROJECT/PROJECT/HTML+CSS/CALCULATOR%20DESIGN/Calculator.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Calculator_files/style.css">
 </head>
 <body>
     <h1>Calculator</h1>
@@ -45,5 +45,5 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+
+</body></html>
